major changes in security